fixed smoke animation and score card alignments

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -193,16 +193,16 @@ code {
 
 @keyframes fadein {
   0% {
-      height: 0em;
+      height: 0vh;
   }
   50% {
-      height: 0em;
+      height: 0vh;
   }
   75% {
       height: 35vh;
   }
   100% {
-      height: 60vh;
+      height: 50vh;
   }
 } 
 
